src/test/ui/consts/const-eval/conditional_array_execution.stderr
warning: any use of this value will cause an error
  --> $DIR/conditional_array_execution.rs:7:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   | ------------------^^^^^---------------------------
   |                   |
   |                   attempt to subtract with overflow
   |
note: the lint level is defined here
  --> $DIR/conditional_array_execution.rs:3:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^

error[E0080]: evaluation of constant expression failed
  --> $DIR/conditional_array_execution.rs:11:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

warning: erroneous constant used
  --> $DIR/conditional_array_execution.rs:11:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

error: aborting due to previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0080`.
